[package]
name = "rust_hexagonal"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "api"
path = "src/cmd/api/main.rs"

#[[bin]]
#name = "cli"
#path = "src/cmd/cli/main.rs"


[dependencies]
humantime-serde = "1.1"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio","migrate"] }
redis = { version = "1.0.2", features = ["tokio-comp", "aio"] }