[package]
name = "rust_hexagonal"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "api"
path = "src/cmd/api/main.rs"

#[[bin]]
#name = "cli"
#path = "src/cmd/cli/main.rs"


[dependencies]
tonic = "0.11"
prost = "0.12"
tonic-reflection = "0.11"
humantime-serde = "1.1"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio = { version = "1.49.0", features = ["full","macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio","migrate"] }
redis = { version = "1.0.2", features = ["tokio-comp", "aio"] }
thiserror = "2.0.18"
async-trait = "0.1.89"

[build-dependencies]
tonic-build = "0.11"